Removed jakarta.persistence dependency from core javadoc. (#2039)
Signed-off-by: Tomáš Kraus <tomas.kraus@oracle.com>